WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
197380
REGRESSION (
r244142
): Fandango accounts tab crashes under Color()
https://bugs.webkit.org/show_bug.cgi?id=197380
Summary
REGRESSION (r244142): Fandango accounts tab crashes under Color()
Tim Horton
Reported
2019-04-29 13:07:54 PDT
REGRESSION (
r244142
): Fandango accounts tab crashes under Color()
Attachments
Patch
(2.15 KB, patch)
2019-04-29 13:08 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2019-04-29 13:08:05 PDT
Created
attachment 368479
[details]
Patch
Tim Horton
Comment 2
2019-04-29 13:08:06 PDT
<
rdar://problem/50186175
>
WebKit Commit Bot
Comment 3
2019-04-29 14:05:38 PDT
Comment on
attachment 368479
[details]
Patch Clearing flags on attachment: 368479 Committed
r244754
: <
https://trac.webkit.org/changeset/244754
>
WebKit Commit Bot
Comment 4
2019-04-29 14:05:40 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug